fix(navigation): Increase the z-index of the list-controls panel

--- a/common/common.scss
+++ b/common/common.scss
@@ -1344,7 +1344,7 @@ button#create-topic .d-icon-plus {
     margin-top: 0;
     position: absolute;
     top: 13px;
-    z-index: 999;
+    z-index: 1999;
     left: 154px;
     width: max-content;
   }
